Fix Vercel deployment - separate static files and API

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,22 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "styles.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "app.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "assets/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -12,8 +28,20 @@
       "dest": "server.js"
     },
     {
+      "src": "/styles.css",
+      "dest": "styles.css"
+    },
+    {
+      "src": "/app.js",
+      "dest": "app.js"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "index.html"
     }
   ]
 }
